languages/io-automaton-fe/src/test/resources/valid/motorstopper/MotorStopperCD.ioautomaton
package valid.motorstopper;

import valid.motorstopper.Types.Data;

automaton MotorStopperCD {

  input Data data;
  output Boolean isSafe;
  
  state A;
  initial A / {true};
  
  A {Data.getZero()};
     
    
}