languages/io-automaton-fe/src/test/resources/invalid/AutomatonWithoutInitialState.ioautomaton
package invalid;

automaton AutomatonWithoutInitialState {
    
    input int x;
    output int i;
    
    state A;		
}